# intercom_upgrade

./: .gitignore  Makefile  README.md  convert-sounds.sh  create_intercom_wiring.ipynb  create_intercom_wiring.py  intercom.yaml  pyproject.toml  sounds.h
