# python pyproject.toml configuration file

[build-system]
# make version from git
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# disable automatic module finding
py-modules = ["__main__"]

[tool.setuptools_scm]
# empty

[tool.ruff]
line-length = 90

[tool.pyright]
venvPath = "."
venv = ".venv"

[project]
name = "intercom_upgrade"
# set version dynamic from git
dynamic = ["version"]
requires-python = ">=3.11"

dependencies = [
    "pyyaml",
    "svgwrite",
    "weasyprint",
    "markdown",
    "cairosvg"
]

[project.optional-dependencies]

espbuild = [
    "esphome>=2025.7.1",
]
